feat(secrets-manager): improved handling of non-exsistent secrets and username input

--- a/tools/secrets-manager/.eslintrc.json
+++ b/tools/secrets-manager/.eslintrc.json
@@ -35,14 +35,7 @@
             ],
             "parser": "jsonc-eslint-parser",
             "rules": {
-                "@nx/dependency-checks": [
-                    "error",
-                    {
-                        "ignoredDependencies": [
-                            "@bitwarden/cli"
-                        ]
-                    }
-                ]
+                "@nx/dependency-checks": "error"
             }
         },
         {
