--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
         "secretlint": "secretlint --secretlintignore .gitignore \"**/*\""
     },
     "devDependencies": {
+        "@astrojs/tailwind": "^5.1.0",
         "@bitwarden/cli": "^2024.8.1",
+        "@cloudflare/kv-asset-handler": "^0.3.4",
         "@iconify/svelte": "^4.0.2",
         "@nx/esbuild": "19.6.0",
         "@nx/eslint": "19.6.0",
@@ -68,10 +70,13 @@
         "@typescript-eslint/eslint-plugin": "7.18.0",
         "@typescript-eslint/parser": "7.18.0",
         "@vitest/ui": "^2.0.5",
+        "astro": "^4.15.4",
         "autoprefixer": "^10.4.20",
         "babel-jest": "^29.7.0",
         "copy-file": "^11.0.0",
         "copyfiles": "^2.4.1",
+        "cross-env": "^7.0.3",
+        "dotenv-cli": "^7.4.2",
         "emailjs": "^4.0.3",
         "esbuild": "^0.23.1",
         "eslint": "^8.57.0",
@@ -116,6 +121,7 @@
         "vite": "^5.4.1",
         "vitepress": "1.3.2",
         "vitest": "^2.0.5",
+        "wrangler": "^3.76.0",
         "yaml": "^2.5.1"
     },
     "dependencies": {
