--- a/apps/server/certbot/Dockerfile
+++ b/apps/server/certbot/Dockerfile
@@ -3,4 +3,6 @@ FROM ubuntu:latest
 RUN apt-get update
 RUN apt-get install -y certbot python3-certbot-nginx python3-certbot-dns-cloudflare
 
-ENTRYPOINT ["certbot"]
+WORKDIR /app
+
+ENTRYPOINT ["echo", "dns_cloudflare_api_token=${CLOUDFLARE_API_TOKEN}", "> /app/cloudflare.ini", "&&", "certbot"]
