--- a/apps/server/nginx/conf/default.conf
+++ b/apps/server/nginx/conf/default.conf
@@ -31,7 +31,7 @@ server {
 }
 
 server {
-    set_by_lua_block $auth_port { return os.getenv("AUTH_PORT"); }
+    set_by_lua_block $keycloak_port { return os.getenv("KEYCLOAK_PORT"); }
 
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
@@ -41,7 +41,7 @@ server {
         proxy_set_header X-Forwarded-Proto https;
         proxy_set_header X-Forwarded-Protocol https;
         proxy_set_header Host auth.justinkonratt.com;
-        set $upstream auth:$auth_port;
+        set $upstream keycloak:$keycloak_port;
         proxy_pass http://$upstream;
     }
 }
