--- a/apps/server/nginx/envs.conf
+++ b/apps/server/nginx/envs.conf
@@ -3,9 +3,9 @@ env SERVER_ADDRESS;
 
 env ADMINER_PORT;
 
-env AUTH_DOMAIN;
-env AUTH_PORT;
-env AUTH_REALM;
+env KEYCLOAK_DOMAIN;
+env KEYCLOAK_PORT;
+env KEYCLOAK_REALM;
 
 env BITWARDEN_PORT;
 
