--- a/apps/maintenance/project.json
+++ b/apps/maintenance/project.json
@@ -10,6 +10,13 @@
                 "cwd": "apps/maintenance"
             }
         },
+        "delete-maintenance": {
+            "executor": "nx:run-commands",
+            "options": {
+                "command": "wrangler delete",
+                "cwd": "apps/maintenance"
+            }
+        },
         "serve": {
             "executor": "nx:run-commands",
             "options": {
