--- a/.env.secure.yaml
+++ b/.env.secure.yaml
@@ -4,6 +4,9 @@ env:
   PROJECT: monorepo
   IMAGE_BASE: ${DOCKER_REGISTRY}/${ORGANIZATION}/${PROJECT}
 
+  DB_NAME: postgres
+  DB_PORT: 5432
+
   ADMINER_PORT: 8080
   DOCKER_REGISTRY_PORT: 5000
   DOCUMENTATION_PORT: 80
